# BernsteinFEM

./: BernsteinFEM.h  CMakeLists.txt  ClassDiagram.xmi  Elem.h  Elem1D.cpp  Elem2DQuad.cpp  Elem2DTri.cpp  JacobiGaussNodes.h  Makefile  MassM.h  MassM1D.cpp  MassM2DQuad.cpp  MassM2DTri.cpp  Moments.h  Moments1D.cpp  Moments2DQuad.cpp  Moments2DTri.cpp  README.MD  StiffM.h  StiffM1D.cpp  StiffM2DQuad.cpp  StiffM2DTri.cpp  config.sh
Derivatives/: CMakeLists.txt  Derivatives.h  QuadD.cpp  TriD.cpp
Elements/: CMakeLists.txt  CubeEl.cpp  Elem.h  Elem1D.cpp  Elem2DQuad.cpp  Elem2DTri.cpp  Element_t.h  Elements.h  LinearEl.cpp  Permutations.cpp  Permutations.h  QuadrilateraEl.cpp  QuadrilateralEl.cpp  TetrahedronEl.cpp  TriangularEl.cpp
Evaluation/: BEval.cpp  BEval1D.cpp  BEval2DQuad.cpp  BEval2DTri.cpp  Evaluation.h
Mass/: BMass.cpp  CMakeLists.txt  MassM.h  MassM1D.cpp  MassM2DQuad.cpp  MassM2DTri.cpp
Moments/: BMoment.cpp  CMakeLists.txt  Moments.h  Moments1D.cpp  Moments2DQuad.cpp  Moments2DTri.cpp  Moments3DCube.cpp  Moments3DTetra.cpp
Quadra/: CMakeLists.txt  JacobiGaussNodes.cpp  JacobiGaussNodes.h
Stiffness/: BStiff.cpp  CMakeLists.txt  StiffM.h  StiffM1D.cpp  StiffM2DQuad.cpp  StiffM2DTri.cpp
Tests/: CMakeLists.txt  LoadVecSample.cpp  MassMatrixSample.cpp  convergence_test.cpp  cpu_test.cpp  cpu_test_tri.cpp  el.cpp  mas.cpp  mass-quad.cpp  mass-tri.cpp  mass.cpp  mom-quad.cpp  mom-tri.cpp  mom.cpp  quad_der.cpp  quad_deta_deta.cpp  quad_dxi_deta.cpp  quad_dxi_dxi.cpp  stif.cpp  stif_quad.cpp  stif_tri.cpp  test1d.cpp
Tests/old/: CMakeLists.txt  mas.cpp  mass-quad.cpp  mass-tri.cpp  mom-quad.cpp  mom-tri.cpp  mom.cpp  quad_deta_deta.cpp  quad_dxi_dxi.cpp  stif.cpp  stif_tri.cpp
docs/: Overview.md  README.md
